tests/ui/cve_2020_35901_2/cve_2020_35901.stderr
error: it is unsound to call `Pin::new_unchecked` on a mutable reference that can be freely moved
  --> tests/ui/cve_2020_35901_2/cve_2020_35901.rs:52:35
   |
LL |     fn poll_next(&mut self, cx: &mut Context<'_>) -> Poll<Option<Result<Bytes, Error>>> {
   |                  --------- mutable reference passed into a public function here
LL |         let mut stream = unsafe { Pin::new_unchecked(self) }.project().stream;
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^ `Pin::new_unchecked` called here
   |
   = note: type `S` doesn't implement `Unpin`
   = note: `#[deny(rpl::unsound_pin_project)]` on by default

error: aborting due to 1 previous error

